--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#F2F2F2">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -18,8 +18,8 @@
                 android:id="@+id/profile_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/grey_light">
+                android:layout_marginBottom="15dp"
+                android:background="@color/color_profile">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivProfimeImage"
@@ -40,10 +40,11 @@
                     android:textSize="14dp" />
 
                 <com.sa.rezq.view.AppTextView
-                    android:visibility="gone"
+                    android:id="@+id/tv_membership_title"
+                    android:visibility="visible"
                     android:layout_width="76dp"
                     android:layout_height="20dp"
-                    android:text="@string/rezq_mem"
+                    android:text="@string/free"
                     android:gravity="center"
                     android:layout_centerInParent="true"
                     android:textColor="@color/white"
@@ -124,6 +125,7 @@
 
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/mblno"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -151,6 +153,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -198,6 +201,6 @@
 
         </RelativeLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
