--- a/app/src/main/res/layout/accountlist_recyclerview_data.xml
+++ b/app/src/main/res/layout/accountlist_recyclerview_data.xml
@@ -15,14 +15,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:orientation="vertical">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
+            <RelativeLayout
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/layout_bg"
-                android:src="@drawable/ic_guest_profile" />
+                android:background="@drawable/layout_bg">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_60sdp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_guest_profile" />
+            </RelativeLayout>
+
+
 
             <com.sa.rezq.view.AppTextView
                 android:id="@+id/tv_profile_name"
@@ -45,14 +53,19 @@
             android:layout_toRightOf="@+id/Linear_UserView"
             android:gravity="center"
             android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/layout_bg">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/add_profile_image"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/layout_bg"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_add_24" />
+            </RelativeLayout>
 
             <com.sa.rezq.view.AppTextView
                 android:id="@+id/tv_add_profilename"
