--- a/app/src/main/res/layout/activity_allpopular_category_view_data.xml
+++ b/app/src/main/res/layout/activity_allpopular_category_view_data.xml
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:layout_gravity="left"
                 android:textAllCaps="true"
                 android:textColor="#171717" />
             <LinearLayout
@@ -79,7 +80,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/mainlnr"
+        android:layout_below="@+id/category_click_item"
         android:background="@color/grey" />
 
 
