--- a/app/src/main/res/layout/add_new_account_activity.xml
+++ b/app/src/main/res/layout/add_new_account_activity.xml
@@ -135,6 +135,7 @@
                 android:layout_below="@+id/rllastname"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="40dp"
+                android:textAllCaps="true"
                 android:layout_marginRight="40dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/button_rezq"
