--- a/app/src/main/res/layout/autocomplete_row_item.xml
+++ b/app/src/main/res/layout/autocomplete_row_item.xml
@@ -15,36 +15,34 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:padding="@dimen/_8sdp">
+        android:background="@color/white"
+        android:padding="@dimen/_6sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/search_iv"
+            android:layout_toLeftOf="@+id/search_iv"
             android:orientation="vertical">
 
             <com.sa.rezq.view.AppTextView
                 android:id="@+id/autoCompleteLabel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/_8sdp"
-                android:textAppearance="@style/SmallText"
-                android:textStyle="normal"
-                android:lineSpacingMultiplier="1.3"
+                android:padding="@dimen/_10sdp"
+                android:textSize="@dimen/_12sdp"
                 android:textColor="@color/app_fontBlackColor" />
-
-            <com.sa.rezq.view.AppTextView_SubTitle
+<!--
+            <com.sa.rezq.view.AppTextView_Title
                 android:id="@+id/autoCompleteLabel_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="5dp"
                 android:textAppearance="@style/SmallText"
-                android:textColor="@color/colorAccent"
-                android:visibility="gone" />
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone" />-->
 
         </LinearLayout>
 
@@ -52,13 +50,13 @@
             android:id="@+id/search_iv"
             android:layout_width="@dimen/_16sdp"
             android:layout_height="@dimen/_16sdp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/_4sdp"
             android:layout_marginRight="@dimen/_4sdp"
-            android:src="@drawable/ic_baseline_arrow_back" />
+            android:src="@drawable/ic_search" />
 
     </RelativeLayout>
 
