--- a/app/src/main/res/layout/nav_header_main1.xml
+++ b/app/src/main/res/layout/nav_header_main1.xml
@@ -26,7 +26,8 @@
         <ImageView
             android:id="@+id/nav_profile_image"
             android:layout_width="80dp"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/offer_border"
             android:src="@drawable/ic_guest_profile"
             app:shapeAppearanceOverlay="@style/roundedCornersImageView" />
             <LinearLayout
@@ -80,6 +81,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/ll_validity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -102,7 +104,7 @@
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tv_upgrade"
-                    android:layout_width="90dp"
+                    android:layout_width="91dp"
                     android:layout_height="32dp"
                     android:background="@drawable/button_border"
                     android:textColor="#FFFFFF"
