--- a/app/src/main/res/layout/popular_places_recyclerview_data.xml
+++ b/app/src/main/res/layout/popular_places_recyclerview_data.xml
@@ -5,17 +5,18 @@
     android:layout_margin="10dp"
     android:background="@color/white">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/click_item"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/product_image"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_28sdp"
+            android:layout_gravity="center"
             android:src="@drawable/image1" />
 
         <com.sa.rezq.view.AppTextView
@@ -23,22 +24,16 @@
             android:layout_width="wrap_content"
             android:layout_below="@id/product_image"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="5dp"
+            android:gravity="center"
             android:text="@string/pizza"
             android:textColor="@color/black"
             android:textSize="12dp" />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_below="@id/product_title"
             android:gravity="center"
             android:layout_height="wrap_content">
-            <com.sa.rezq.view.AppTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/distance"
-                android:textColor="@color/holo_green" />
             <com.sa.rezq.view.AppTextView
                 android:id="@+id/tv_distance"
                 android:layout_width="wrap_content"
@@ -46,6 +41,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/off"
+                android:singleLine="true"
                 android:textColor="@color/holo_green" />
 
 
@@ -53,7 +49,7 @@
 
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
