--- a/app/src/main/res/layout/redeem_offer_activity.xml
+++ b/app/src/main/res/layout/redeem_offer_activity.xml
@@ -16,20 +16,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_10sdp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/iv_restro_image"
-                android:layout_width="35dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_height="35dp"
-                android:src="@drawable/ic_baseline_image_24"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/iv_restro_image"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_centerInParent="true"
+                    android:layout_height="@dimen/_60sdp"
+                    android:src="@drawable/ic_baseline_image_24"/>
+            </RelativeLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -44,6 +50,7 @@
                     android:text=""/>
 
                 <LinearLayout
+                    android:id="@+id/ll_ratings_count"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -55,25 +62,40 @@
                         android:layout_height="wrap_content"
                         android:text=""
                         android:textColor="#FFB400"
+                        android:layout_gravity="center"
                         android:textSize="16dp"
                         android:textStyle="bold" />
                     <com.sa.rezq.view.AppTextView
-                        android:id="@+id/restro_rating_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableRight="@drawable/ic_baseline_star_rate_24"
+                        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
                         android:textColor="#FFB400"
+                        android:layout_gravity="center"
                         android:gravity="center"
                         android:layout_marginLeft="4dp"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <com.sa.rezq.view.AppTextView
+                        android:id="@+id/restro_rating_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="#FFB400"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_marginLeft="8dp"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <com.sa.rezq.view.AppTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
                         android:text="@string/reating"
+                        android:textAllCaps="true"
                         android:textColor="#171717"
+                        android:textStyle="bold"
                         android:textSize="12dp" />
                 </LinearLayout>
             </LinearLayout>
@@ -94,15 +116,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginTop="15dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/image_offer"
-                    android:layout_width="52dp"
+                    android:layout_width="55dp"
                     android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:layout_height="52dp" />
+                    android:background="@drawable/offer_border"
+                    android:layout_height="55dp" />
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/offer_title"
                     android:layout_width="wrap_content"
