--- a/app/src/main/res/layout/tool_bar_search_detail.xml
+++ b/app/src/main/res/layout/tool_bar_search_detail.xml
@@ -29,26 +29,11 @@
             android:textStyle="bold"
             android:visibility="visible"
             android:gravity="center"
+            android:textSize="14dp"
             android:maxLines="1"
             android:textColor="@color/black"
             android:layout_gravity="center"
             android:id="@+id/toolbar_title"/>
-        <com.sa.rezq.view.AppEditTextView
-            android:id="@+id/tv_search"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:textAppearance="@style/MediumText"
-            android:layout_centerInParent="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/_15sdp"
-            android:background="@drawable/ic_search"
-            android:textStyle="bold"
-            android:visibility="visible"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:layout_gravity="center" />
-
 
 
 
