--- a/app/src/main/res/layout/trending_recyclerview_data.xml
+++ b/app/src/main/res/layout/trending_recyclerview_data.xml
@@ -6,17 +6,11 @@
 
     <RelativeLayout
         android:id="@+id/single_imageview_main_rl"
-        android:layout_width="158dp"
-        android:visibility="gone"
+        android:layout_width="170dp"
         android:layout_height="170dp"
-        android:layout_margin="8dp">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardItem"
-            app:cardBackgroundColor="@color/transparent_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="10dp">
+        android:visibility="gone"
+        android:background="@drawable/slider_border"
+        android:layout_margin="6dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -24,8 +18,8 @@
 
                 <ImageView
                     android:id="@+id/product_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_width="170dp"
+                    android:layout_height="170dp" />
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/product_title"
@@ -69,7 +63,6 @@
 
             </RelativeLayout>
 
-        </androidx.cardview.widget.CardView>
 
 
     </RelativeLayout>
@@ -79,27 +72,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/single_imageview_main_rl"
-        android:layout_margin="8dp">
+        android:layout_margin="6dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/first_card_item"
-                android:layout_width="158dp"
-                app:cardBackgroundColor="@color/transparent_image"
-                android:layout_height="80dp"
-                app:cardCornerRadius="10dp">
-
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:id="@+id/first_card_item"
+                    android:layout_width="170dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/slider_border">
 
                     <ImageView
                         android:id="@+id/first_product_image"
-                        android:layout_width="158dp"
+                        android:layout_width="170dp"
                         android:layout_height="80dp" />
 
                     <com.sa.rezq.view.AppTextView
@@ -139,26 +127,18 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-
                 </RelativeLayout>
 
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:id="@+id/second_card_item"
-                android:layout_width="158dp"
-                app:cardBackgroundColor="@color/transparent_image"
-                android:layout_marginTop="10dp"
-                android:layout_height="80dp"
-                app:cardCornerRadius="10dp">
-
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:id="@+id/second_card_item"
+                    android:layout_width="170dp"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/slider_border">
 
                     <ImageView
                         android:id="@+id/second_product_image"
-                        android:layout_width="158dp"
+                        android:layout_width="170dp"
                         android:layout_height="80dp" />
 
                     <com.sa.rezq.view.AppTextView
@@ -201,7 +181,6 @@
                 </RelativeLayout>
 
 
-            </androidx.cardview.widget.CardView>
 
 
         </LinearLayout>
