--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,13 +16,12 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="TextAppearence.App.TextInputLayout" parent="@android:style/TextAppearance">
+    <style name="TextInputLayoutStyle" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/_13sdp</item>
         <item name="colorControlNormal">@color/black</item>
-
+        <item name="colorControlHighlight">@color/app_grey_text</item>
         //added attributes
-        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlActivated">@color/black</item>
 
     </style>
 
@@ -77,5 +76,11 @@
         <item name="colorControlNormal">@android:color/tertiary_text_dark</item>
         <item name="colorControlActivated">@android:color/holo_orange_light</item>
     </style>
+
+    <style name="TextAppearence.App.TextInputLayout" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/app_grey_text</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
 
 </resources>
